cmake_minimum_required(VERSION 3.6)
project(wpa_supplicant)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    dbus/dbus_common.c
    dbus/dbus_common.h
    dbus/dbus_common_i.h
    dbus/dbus_dict_helpers.c
    dbus/dbus_dict_helpers.h
    dbus/dbus_new.c
    dbus/dbus_new.h
    dbus/dbus_new_handlers.c
    dbus/dbus_new_handlers.h
    dbus/dbus_new_handlers_p2p.c
    dbus/dbus_new_handlers_p2p.h
    dbus/dbus_new_handlers_wps.c
    dbus/dbus_new_helpers.c
    dbus/dbus_new_helpers.h
    dbus/dbus_new_introspect.c
    dbus/dbus_old.c
    dbus/dbus_old.h
    dbus/dbus_old_handlers.c
    dbus/dbus_old_handlers.h
    dbus/dbus_old_handlers_wps.c
    tests/link_test.c
    tests/test_eap_sim_common.c
    tests/test_wpa.c
    wpa_gui-qt4/addinterface.cpp
    wpa_gui-qt4/addinterface.h
    wpa_gui-qt4/eventhistory.cpp
    wpa_gui-qt4/eventhistory.h
    wpa_gui-qt4/main.cpp
    wpa_gui-qt4/networkconfig.cpp
    wpa_gui-qt4/networkconfig.h
    wpa_gui-qt4/peers.cpp
    wpa_gui-qt4/peers.h
    wpa_gui-qt4/scanresults.cpp
    wpa_gui-qt4/scanresults.h
    wpa_gui-qt4/scanresultsitem.cpp
    wpa_gui-qt4/scanresultsitem.h
    wpa_gui-qt4/signalbar.cpp
    wpa_gui-qt4/signalbar.h
    wpa_gui-qt4/stringquery.cpp
    wpa_gui-qt4/stringquery.h
    wpa_gui-qt4/userdatarequest.cpp
    wpa_gui-qt4/userdatarequest.h
    wpa_gui-qt4/wpagui.cpp
    wpa_gui-qt4/wpagui.h
    wpa_gui-qt4/wpamsg.h
    ap.c
    ap.h
    autoscan.c
    autoscan.h
    autoscan_exponential.c
    autoscan_periodic.c
    bgscan.c
    bgscan.h
    bgscan_learn.c
    bgscan_simple.c
    blacklist.c
    blacklist.h
    bss.c
    bss.h
    config.c
    config.h
    config_file.c
    config_none.c
    config_ssid.h
    config_winreg.c
    ctrl_iface.c
    ctrl_iface.h
    ctrl_iface_named_pipe.c
    ctrl_iface_udp.c
    ctrl_iface_unix.c
    driver_i.h
    eap_register.c
    eapol_test.c
    events.c
    gas_query.c
    gas_query.h
    hs20_supplicant.c
    hs20_supplicant.h
    ibss_rsn.c
    ibss_rsn.h
    interworking.c
    interworking.h
    main.c
    main_none.c
    main_winmain.c
    main_winsvc.c
    mesh.c
    mesh.h
    mesh_mpm.c
    mesh_mpm.h
    mesh_rsn.c
    mesh_rsn.h
    nfc_pw_token.c
    notify.c
    notify.h
    offchannel.c
    offchannel.h
    p2p_supplicant.c
    p2p_supplicant.h
    p2p_supplicant_sd.c
    preauth_test.c
    scan.c
    scan.h
    sme.c
    sme.h
    wifi_display.c
    wifi_display.h
    win_if_list.c
    wmm_ac.c
    wmm_ac.h
    wnm_sta.c
    wnm_sta.h
    wpa_cli.c
    wpa_passphrase.c
    wpa_priv.c
    wpa_supplicant.c
    wpa_supplicant_i.h
    wpas_glue.c
    wpas_glue.h
    wpas_kay.c
    wpas_kay.h
    wpas_module_tests.c
    wps_supplicant.c
    wps_supplicant.h)

add_executable(wpa_supplicant ${SOURCE_FILES})